# data-downloader

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
behaverse_data_downloader/: __init__.py  cli.py  manager.py
behaverse_data_downloader/api/: __init__.py  client.py
behaverse_data_downloader/commands/: __init__.py  base.py  config.py  create_config.py  download.py  fetch.py  log.py  remote.py  rm.py  status.py  study.py  test_connection.py
behaverse_data_downloader/downloader/: __init__.py  manager.py
behaverse_data_downloader/storage/: __init__.py  manager.py
config/: test-new-study.json
docs/: developer-guide.md
settings/: README.md  config_template.json  default_config.json
study_configs/: README.md  demo-study.json  test-study.json  tg_release_test.json
